tests/data-clumps/test-cases/parameter-parameter/simple/negative/typescript/source/BillingProcessor.ts
export class BillingProcessor {
  createInvoice(patientId: number, doctorId: number, invoiceAmount: number): void {
    console.log(`Creating invoice of ${invoiceAmount} for patient ${patientId} with doctor ${doctorId}`);
  }
}
